--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -5,3 +5,13 @@
   year = {2024},
   url = {https://dspace.mit.edu/handle/1721.1/156598}
 }
+
+@misc{Radius,
+    author = {Adamaszek, Michal},
+    title = {The dangers of large bounds},
+    year = {2024},
+    month = {06},
+    organization = {Mosek},
+    note = {accessed on July 28 2025},
+    url = {https://themosekblog.blogspot.com/2024/06/the-dangers-of-large-bounds.html?m=1}
+}
